--- a/src/main/resources/com/example/petralibrarymanager/login-view.fxml
+++ b/src/main/resources/com/example/petralibrarymanager/login-view.fxml
@@ -23,7 +23,7 @@
             <Insets bottom="50.0" left="20.0" right="20.0" top="50.0" />
          </padding>
          <children>
-            <Label styleClass="title-label" text="Login to Petra Library Manager">
+            <Label fx:id="headingLabel" styleClass="title-label" text="Login to Petra Library Manager">
                <font>
                   <Font name="AGaramondPro-Bold" size="20.0" />
                </font>
