--- a/src/main/resources/com/example/petralibrarymanager/login-view.fxml
+++ b/src/main/resources/com/example/petralibrarymanager/login-view.fxml
@@ -1,24 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.String?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<StackPane fx:id="rootPane" styleClass="root" stylesheets="@styles/style.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.petralibrarymanager.LoginController">
+<StackPane fx:id="rootPane" styleClass="dashboard-container-upper" stylesheets="@styles/style.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.petralibrarymanager.LoginController">
    <children>
-      <ImageView fx:id="bgImage1" fitHeight="579.0" fitWidth="824.0" pickOnBounds="true">
-         <image>
-            <Image url="@images/bgs/6.jpg" />
-         </image>
-      </ImageView>
-      <VBox fx:id="loginVBox" alignment="CENTER" styleClass="login-container2" stylesheets="@styles/style.css">
+      <VBox fx:id="loginVBox" alignment="CENTER">
          <padding>
             <Insets bottom="50.0" left="20.0" right="20.0" top="50.0" />
          </padding>
@@ -44,9 +38,9 @@
                <VBox.margin>
                   <Insets left="80.0" right="80.0" />
                </VBox.margin></PasswordField>
-            <Label fx:id="messageLabel" styleClass="error-label" text="The username/email or password is not found. Please try again!" textFill="#b53333">
+            <Label fx:id="messageLabel" text="The username/email or password is not found. Please try again!" textFill="#b53333">
                <font>
-                  <Font name="System Italic" size="12.0" />
+                  <Font name="System Bold Italic" size="12.0" />
                </font>
             </Label>
             <Button fx:id="loginButton" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#onLoginClicked" styleClass="action-button" text="LOGIN">
@@ -58,6 +52,10 @@
          <StackPane.margin>
             <Insets bottom="100.0" left="200.0" right="200.0" top="100.0" />
          </StackPane.margin>
+         <styleClass>
+            <String fx:value="acrylic-vbox" />
+            <String fx:value="acrylic-green" />
+         </styleClass>
       </VBox>
    </children>
 </StackPane>
