--- a/src/main/resources/com/example/petralibrarymanager/home-super-subview.fxml
+++ b/src/main/resources/com/example/petralibrarymanager/home-super-subview.fxml
@@ -1,11 +1,184 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.String?>
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.layout.StackPane?>
+<?import javafx.scene.control.ScrollPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.TilePane?>
+<?import javafx.scene.layout.VBox?>
 
 
-<StackPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<VBox prefHeight="744.0" prefWidth="832.0" styleClass="content-root" stylesheets="@styles/content.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <Label text="HELLO, THIS IS THE HOME" />
+      <Label styleClass="section-title" text="HOME" />
+      <ScrollPane fitToWidth="true" hbarPolicy="NEVER" prefHeight="837.0" prefWidth="812.0">
+         <content>
+            <VBox prefHeight="458.0" prefWidth="791.0">
+               <children>
+                  <VBox prefHeight="200.0" prefWidth="100.0" styleClass="section">
+                     <children>
+                        <Label styleClass="section-title" text="Dashboard Overview" />
+                        <HBox styleClass="card-row">
+                           <children>
+                              <VBox prefHeight="200.0" prefWidth="100.0">
+                                 <styleClass>
+                                    <String fx:value="card" />
+                                    <String fx:value="card-blue" />
+                                 </styleClass>
+                              </VBox>
+                              <VBox prefHeight="200.0" prefWidth="100.0">
+                                 <styleClass>
+                                    <String fx:value="card" />
+                                    <String fx:value="card-green" />
+                                 </styleClass>
+                              </VBox>
+                              <VBox prefHeight="200.0" prefWidth="100.0">
+                                 <styleClass>
+                                    <String fx:value="card" />
+                                    <String fx:value="card-yellow" />
+                                 </styleClass>
+                              </VBox>
+                              <VBox prefHeight="200.0" prefWidth="100.0">
+                                 <styleClass>
+                                    <String fx:value="card" />
+                                    <String fx:value="card-red" />
+                                 </styleClass>
+                              </VBox>
+                              <VBox layoutX="32.0" layoutY="32.0" prefHeight="200.0" prefWidth="100.0">
+                                 <styleClass>
+                                    <String fx:value="card" />
+                                    <String fx:value="card-cyan" />
+                                 </styleClass>
+                              </VBox>
+                           </children>
+                        </HBox>
+                     </children>
+                     <VBox.margin>
+                        <Insets bottom="50.0" />
+                     </VBox.margin>
+                  </VBox>
+                  <VBox prefHeight="200.0" prefWidth="100.0" styleClass="section">
+                     <children>
+                        <Label styleClass="section-title" text="Shortcuts" />
+                        <HBox styleClass="card-row">
+                           <children>
+                              <VBox prefHeight="200.0" prefWidth="100.0">
+                                 <styleClass>
+                                    <String fx:value="card" />
+                                    <String fx:value="card-blue" />
+                                 </styleClass>
+                              </VBox>
+                              <VBox prefHeight="200.0" prefWidth="100.0">
+                                 <styleClass>
+                                    <String fx:value="card" />
+                                    <String fx:value="card-green" />
+                                 </styleClass>
+                              </VBox>
+                              <VBox prefHeight="200.0" prefWidth="100.0">
+                                 <styleClass>
+                                    <String fx:value="card" />
+                                    <String fx:value="card-yellow" />
+                                 </styleClass>
+                              </VBox>
+                              <VBox prefHeight="200.0" prefWidth="100.0">
+                                 <styleClass>
+                                    <String fx:value="card" />
+                                    <String fx:value="card-red" />
+                                 </styleClass>
+                              </VBox>
+                              <VBox layoutX="32.0" layoutY="32.0" prefHeight="200.0" prefWidth="100.0">
+                                 <styleClass>
+                                    <String fx:value="card" />
+                                    <String fx:value="card-cyan" />
+                                 </styleClass>
+                              </VBox>
+                           </children>
+                        </HBox>
+                     </children>
+                  </VBox>
+                  <VBox layoutX="10.0" layoutY="264.0" prefHeight="200.0" prefWidth="100.0" styleClass="section">
+                     <children>
+                        <Label styleClass="section-title" text="Shortcuts" />
+                        <HBox styleClass="card-row">
+                           <children>
+                              <VBox prefHeight="200.0" prefWidth="100.0">
+                                 <styleClass>
+                                    <String fx:value="card" />
+                                    <String fx:value="card-blue" />
+                                 </styleClass>
+                              </VBox>
+                              <VBox prefHeight="200.0" prefWidth="100.0">
+                                 <styleClass>
+                                    <String fx:value="card" />
+                                    <String fx:value="card-green" />
+                                 </styleClass>
+                              </VBox>
+                              <VBox prefHeight="200.0" prefWidth="100.0">
+                                 <styleClass>
+                                    <String fx:value="card" />
+                                    <String fx:value="card-yellow" />
+                                 </styleClass>
+                              </VBox>
+                              <VBox prefHeight="200.0" prefWidth="100.0">
+                                 <styleClass>
+                                    <String fx:value="card" />
+                                    <String fx:value="card-red" />
+                                 </styleClass>
+                              </VBox>
+                              <VBox layoutX="32.0" layoutY="32.0" prefHeight="200.0" prefWidth="100.0">
+                                 <styleClass>
+                                    <String fx:value="card" />
+                                    <String fx:value="card-cyan" />
+                                 </styleClass>
+                              </VBox>
+                           </children>
+                        </HBox>
+                     </children>
+                  </VBox>
+                  <VBox layoutX="10.0" layoutY="468.0" prefHeight="200.0" prefWidth="100.0" styleClass="section">
+                     <children>
+                        <Label styleClass="section-title" text="Shortcuts" />
+                        <HBox styleClass="card-row">
+                           <children>
+                              <VBox prefHeight="200.0" prefWidth="100.0">
+                                 <styleClass>
+                                    <String fx:value="card" />
+                                    <String fx:value="card-blue" />
+                                 </styleClass>
+                              </VBox>
+                              <VBox prefHeight="200.0" prefWidth="100.0">
+                                 <styleClass>
+                                    <String fx:value="card" />
+                                    <String fx:value="card-green" />
+                                 </styleClass>
+                              </VBox>
+                              <VBox prefHeight="200.0" prefWidth="100.0">
+                                 <styleClass>
+                                    <String fx:value="card" />
+                                    <String fx:value="card-yellow" />
+                                 </styleClass>
+                              </VBox>
+                              <VBox prefHeight="200.0" prefWidth="100.0">
+                                 <styleClass>
+                                    <String fx:value="card" />
+                                    <String fx:value="card-red" />
+                                 </styleClass>
+                              </VBox>
+                              <VBox layoutX="32.0" layoutY="32.0" prefHeight="200.0" prefWidth="100.0">
+                                 <styleClass>
+                                    <String fx:value="card" />
+                                    <String fx:value="card-cyan" />
+                                 </styleClass>
+                              </VBox>
+                           </children>
+                        </HBox>
+                     </children>
+                  </VBox>
+               </children>
+            </VBox>
+         </content>
+      </ScrollPane>
+      <TilePane prefHeight="200.0" prefWidth="200.0" />
    </children>
-</StackPane>
+</VBox>
